testing 23 finally fixed it but scrolling on mobile is not smooth.

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body .bg .overlay .Rcontainer {                        /* edited */
     height: 100vh;
     overflow-x: hidden;
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch !important;
 }
 body .overlay .right-label {
     margin-left: 35%;
